--- a/Week-2/assignment-1/scss/style.css
+++ b/Week-2/assignment-1/scss/style.css
@@ -102,13 +102,19 @@ body {
   padding: 40px 0;
 }
 
+.form-container form label:nth-child(1) span {
+  margin-left: 25px;
+}
+
 .form-container form label {
   display: block;
   margin: 19px 0;
   font-size: 16px;
 }
 
-.form-container form label input[type="text"], .form-container form label input[type="password"], .form-container form label input[type="email"] {
+.form-container form label input[type="text"],
+.form-container form label input[type="password"],
+.form-container form label input[type="email"] {
   display: inline-block;
   margin-left: 10px;
   border: 2px solid grey;
@@ -119,7 +125,7 @@ body {
 
 .form-container form label input[type="radio"] {
   display: inline-block;
-  margin-left: 10px;
+  margin-left: 0px;
   border: 2px solid grey;
   width: 20px;
   height: 15px;
@@ -131,5 +137,44 @@ body {
   border: 2px solid grey;
   width: 20px;
   height: 15px;
+}
+
+.form-container form input[type="submit"] {
+  display: inline-block;
+  margin-top: 20px;
+  width: 170px;
+  height: 33px;
+  background-color: grey;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-family: "League Spartan";
+  font-size: 17px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.footer-container {
+  width: 100vw;
+  background-color: #cfcfcf;
+  overflow-x: hidden;
+}
+
+.footer-container .footer-layout {
+  width: 1440px;
+  margin: 0px auto;
+  background-color: #cfcfcf;
+}
+
+.footer-container .footer-box {
+  width: 1250px;
+  margin: 0px auto;
+  padding: 40px 0;
+  background-color: #cfcfcf;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  place-items: center;
 }
 /*# sourceMappingURL=style.css.map */
